# chest-xray-classifier

./: README.md  best-model.pth  main.py  pyproject.toml
src/evaluation/: metrics.py
src/models/: cnn.py  numpy_net.py
src/training/: trainer.py
tests/: test_cnn.py  test_layers.py  test_trainer.py
