[project]
name = "chest-xray-classifier"
version = "0.1.0"
description = "a chest xray disease detection system"
authors = [
    {name = "Oladimeji",email = "boladimeji834@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
